[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "release-planner"
version = "0.1.0"
description = "RHOAI release planning spreadsheet generator (outputs to Excel and Google Sheets)"
requires-python = ">=3.11"
dependencies = [
    "jira>=3.8,<4",
    "gspread>=6.0,<7",
    "google-auth>=2.0,<3",
    "click>=8.1,<9",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0,<7",
    "python-dotenv>=1.0,<2",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
release-planner = "release_planner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: marks tests that require a live Jira connection"]
